--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -6,3 +6,6 @@ rules:
   - base: linux-5.3.y
     upstream: gregkh:linux-5.3.y
     mergeMethod: hardreset
+  - base: linux-5.4.y
+    upstream: gregkh:linux-5.4.y
+    mergeMethod: hardreset
