--- a/arch/arm64/boot/dts/allwinner/sun50i-h6-tanix-tx6.dts
+++ b/arch/arm64/boot/dts/allwinner/sun50i-h6-tanix-tx6.dts
@@ -45,11 +45,19 @@
 	status = "okay";
 };
 
+&dwc3 {
+	status = "okay";
+};
+
 &ehci0 {
 	status = "okay";
 };
 
 &ehci3 {
+	status = "okay";
+};
+
+&gpu {
 	status = "okay";
 };
 
@@ -81,6 +89,7 @@
 };
 
 &r_ir {
+	linux,rc-map-name = "rc-tanix-tx5max";
 	status = "okay";
 };
 
@@ -96,5 +105,9 @@
 };
 
 &usb2phy {
+	status = "okay";
+};
+
+&usb3phy {
 	status = "okay";
 };
